--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
 		"start": "vite"
 	},
 	"dependencies": {
+		"lucide-react": "^0.507.0",
 		"nodemon": "^3.1.10",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.5.3"
+		"react-router-dom": "^7.5.3",
+		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.22.0",
